--- a/resources/audit.html
+++ b/resources/audit.html
@@ -36,7 +36,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-65b02f08.js";
+            window.path_to_searchindex_js = "../searchindex-ccbb8b4f.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-418577b2.js"></script>
@@ -177,7 +177,7 @@
                     <main>
                         <h1 id="audit-reports"><a class="header" href="#audit-reports">Audit Reports</a></h1>
 <p>This page redirects you to the external URL:</p>
-<p>View Audit Reports 👉 <a href="https://github.com/brevis-network/incentra-contracts/tree/main/audit" target="_blank" rel="noreferrer">https://github.com/brevis-network/incentra-contracts/tree/main/audit</a></p>
+<p>View Audit Reports. 👉 <a href="https://github.com/brevis-network/incentra-contracts/tree/main/audit" target="_blank" rel="noreferrer">https://github.com/brevis-network/incentra-contracts/tree/main/audit</a></p>
 
                     </main>
 
