--- a/create-campaigns/concentrated-liquidity-campaign.html
+++ b/create-campaigns/concentrated-liquidity-campaign.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-3c8a8ee5.js";
+            window.path_to_searchindex_js = "../searchindex-3dbab584.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-a782aae6.js"></script>
+        <script src="../toc-d0d78757.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,19 +175,17 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <hr>
-<h2 id="description-create-and-manage-a-concentrated-liquidity-campaign"><a class="header" href="#description-create-and-manage-a-concentrated-liquidity-campaign">description: Create and manage a Concentrated Liquidity campaign</a></h2>
-<h1 id="concentrated-liquidity-campaign"><a class="header" href="#concentrated-liquidity-campaign">Concentrated Liquidity Campaign</a></h1>
+                        <h1 id="concentrated-liquidity-campaign"><a class="header" href="#concentrated-liquidity-campaign">Concentrated Liquidity Campaign</a></h1>
 <p>Click “Create a new campaign” to create a campaign, and select the Campaign Type you would like to create.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-15 at 17.00.53.png" alt=""><figcaption></figcaption></figure>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-15 at 17.25.34.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-15 at 17.00.53.png" alt=""><figcaption></figcaption></p>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-15 at 17.25.34.png" alt=""><figcaption></figcaption></p>
 <p>To create a Concentrated Liquidity campaign, you need to config the following info:</p>
 <ul>
 <li>Campaign Name</li>
 <li>Dex</li>
 <li>Liquidity Pool: select the chain where the pool is deployed, enter the pool address and the pool name</li>
 </ul>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.22.29.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.22.29.png" alt=""><figcaption></figcaption></p>
 <ul>
 <li>Campaign Start Time and End Time: select the start time and end time, you could also select to set a 7-day/14-day/30-day/90-day campaign and the campaign end time will be displayed automatically</li>
 <li>Blacklist Address List: it is optional to exclude specific addresses from receiving rewards</li>
@@ -195,21 +193,22 @@
 <li>URL: enter the URL of the dApp where LPs could deposit liquidity</li>
 </ul>
 <p>Once all the required information is provided, you can click the ‘Create Campaign’ button to confirm the campaign settings.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.22.36.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.22.36.png" alt=""><figcaption></figcaption></p>
 <p>Please review and confirm your campaign settings before launching the campaign as the configs cannot be changed after creation.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.29.05.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.29.05.png" alt=""><figcaption></figcaption></p>
 <p>Once the campaign settings are submitted, the campaign will be created. </p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.11.37.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.11.37.png" alt=""><figcaption></figcaption></p>
 <p>You would see a pop-up with a campaign ID and view the campaign creation tx hash in explorer, confirming that your campaign has been successfully created. </p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.29.26.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-18 at 18.29.26.png" alt=""><figcaption></figcaption></p>
 <p>You may also see the campaign creation is failed or campaign is creating, and could retry the campaign creation in the campaign page.</p>
-<p>{% hint style=“warning” %}
-To deposit rewards, you may also directly transfer reward tokens to the campaign contract via a simple ERC-20 transfer from a different address (e.g., a multi-sig) later.
-{% endhint %}</p>
+<blockquote>
+<p><strong>Note:</strong>
+To deposit rewards, you may also directly transfer reward tokens to the campaign contract via a simple ERC-20 transfer from a different address (e.g., a multi-sig) later.</p>
+</blockquote>
 <p>Once the campaign is created, please deposit the rewards into the reward contract to enable reward distribution. You may deposit rewards while the campaign is to be started, active, or even ended. By default, the total rewards amount should be deposited.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.12.24.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.12.24.png" alt=""><figcaption></figcaption></p>
 <p>Once the reward tokens are deposited, congratulations — you’re all set!</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.12.55.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-17 at 19.12.55.png" alt=""><figcaption></figcaption></p>
 
                     </main>
 
