--- a/earn-rewards/user-tutorials.html
+++ b/earn-rewards/user-tutorials.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-3c8a8ee5.js";
+            window.path_to_searchindex_js = "../searchindex-3dbab584.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-a782aae6.js"></script>
+        <script src="../toc-d0d78757.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,20 +175,18 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <hr>
-<h2 id="description-everything-you-need-to-earn-rewards"><a class="header" href="#description-everything-you-need-to-earn-rewards">description: Everything you need to earn rewards</a></h2>
-<h1 id="user-tutorials"><a class="header" href="#user-tutorials">User Tutorials</a></h1>
+                        <h1 id="user-tutorials"><a class="header" href="#user-tutorials">User Tutorials</a></h1>
 <p>Welcome to Brevis Incentra — <a href="https://incentra.brevis.network/">https://incentra.brevis.network/</a> — for participating in incentive campaigns and claim your rewards. To earn and claim rewards on Incentra, you will need to connect your wallet first. </p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.33.53.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.33.53.png" alt=""><figcaption></figcaption></p>
 <h3 id="discover-campaigns"><a class="header" href="#discover-campaigns">Discover Campaigns</a></h3>
 <p>By default, you will see the “Earn” page, which lists all available campaigns on Incentra. By clicking on each row, you can view details of the active campaigns and access the URL to participate and start earning right away!</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.36.11.png" alt=""><figcaption></figcaption></figure>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.37.08.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.36.11.png" alt=""><figcaption></figcaption></p>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.37.08.png" alt=""><figcaption></figcaption></p>
 <h3 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h3>
 <p>On the Dashboard page, you can view your claimable rewards and see all campaigns you’ve participated in—whether still active or ended with unclaimed rewards. Please note that rewards can be claimed anytime within <strong>180 days</strong> after a campaign ends.</p>
 <p>You can either click the ‘Claim All’ button to collect all rewards on the same chain in one single transaction, or click the ‘Claim’ button next to each campaign to claim them individually.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.42.08 (1).png" alt=""><figcaption></figcaption></figure>
-<figure><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.51.07 (1).png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.42.08 (1).png" alt=""><figcaption></figcaption></p>
+<p><img src="../.gitbook/assets/Screenshot 2025-05-19 at 01.51.07 (1).png" alt=""><figcaption></figcaption></p>
 
                     </main>
 
