--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-3c8a8ee5.js";
+            window.path_to_searchindex_js = "searchindex-3dbab584.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-a782aae6.js"></script>
+        <script src="toc-d0d78757.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,12 +175,8 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <hr>
-<h2 id="description---drive-sustainable-growth-with-reliable-secure-and-verifiable-incentive-distribution"><a class="header" href="#description---drive-sustainable-growth-with-reliable-secure-and-verifiable-incentive-distribution">description: &gt;-
-Drive sustainable growth with reliable, secure, and verifiable incentive
-distribution.</a></h2>
-<h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<figure><img src=".gitbook/assets/1661011026.png" alt=""><figcaption></figcaption></figure>
+                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<p><img src=".gitbook/assets/1661011026.png" alt=""><figcaption></figcaption></p>
 <p>Welcome to Incentra - a reliable, secure, and verifiable incentive distribution platform for DeFi protocols powered by <a href="https://coprocessor-docs.brevis.network/">Brevis zkCoprocessor</a>. Incentra is designed to connect protocols with liquidity providers and individual users, and to incentivize liquidity provision, token holding and many other interactions with the protocols. It may help to achieve massive success in increasing the TVL and other forms of user proactivity and engagement with the protocols.</p>
 
                     </main>
