--- a/technical-architecture.html
+++ b/technical-architecture.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-3c8a8ee5.js";
+            window.path_to_searchindex_js = "searchindex-3dbab584.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-a782aae6.js"></script>
+        <script src="toc-d0d78757.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -175,11 +175,9 @@
 
                 <div id="mdbook-content" class="content">
                     <main>
-                        <hr>
-<h2 id="description-a-10000-feet-overview-of-incentras-technical-architecture"><a class="header" href="#description-a-10000-feet-overview-of-incentras-technical-architecture">description: A 10,000-feet overview of Incentra’s technical architecture</a></h2>
-<h1 id="technical-architecture"><a class="header" href="#technical-architecture">Technical Architecture</a></h1>
+                        <h1 id="technical-architecture"><a class="header" href="#technical-architecture">Technical Architecture</a></h1>
 <p>The diagram below shows Incentra’s high-level architecture and workflow to support a campaign. </p>
-<figure><img src=".gitbook/assets/Screenshot 2025-05-02 at 4.16.53 PM.png" alt=""><figcaption></figcaption></figure>
+<p><img src=".gitbook/assets/Screenshot 2025-05-02 at 4.16.53 PM.png" alt=""><figcaption></figcaption></p>
 <p>A campaign is divided into multiple epochs (e.g., 4 hours per epoch). Once a campaign is created, the Incentra server performs the following actions during <em>each epoch</em>:</p>
 <ol>
 <li>Fetches blockchain data relevant to the campaign.</li>
