--- a/resources/supported-chains-and-protocols.html
+++ b/resources/supported-chains-and-protocols.html
@@ -36,10 +36,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-3dbab584.js";
+            window.path_to_searchindex_js = "../searchindex-3eeb8d76.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-d0d78757.js"></script>
+        <script src="../toc-80d176f6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -184,30 +184,25 @@
 </thead>
 <tbody>
 <tr><td>ERC-20 Token</td><td>Token Holding</td><td>Any protocol requiring ERC-20 token holding</td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td><a href="https://app.uniswap.org/">Uniswap v3</a></td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td><a href="https://dapp.quickswap.exchange/swap">QuickSwap v3</a></td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v3 (coming soon)</td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v4 (coming soon)</td></tr>
-<tr><td>Lending Protocol</td><td>Lend and Borrow</td><td><a href="https://app.euler.finance/">Euler Finance</a></td></tr>
-<tr><td>ALM</td><td>Concentrated Liquidity</td><td><a href="https://app.beefy.finance/">Beefy</a></td></tr>
-<tr><td>ALM</td><td>Concentrated Liquidity</td><td><a href="https://app.gamma.xyz/">Gamma</a></td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>Uniswap v3</td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v3</td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>KoalaSwap</td></tr>
+<tr><td>Lending Protocol</td><td>Lend and Borrow</td><td>Euler Finance</td></tr>
 </tbody>
 </table>
 
 <h2 id="supported-chains"><a class="header" href="#supported-chains">Supported Chains</a></h2>
-<h4 id="data-source-chain"><a class="header" href="#data-source-chain">Data Source Chain</a></h4>
-<p>You can incentivize protocols deployed on the following chains:</p>
 <ul>
 <li>Ethereum</li>
+<li>Arbitrum</li>
+<li>OP</li>
+<li>Linea</li>
 <li>BNB Chain</li>
+<li>Base</li>
+<li>World Chain</li>
+<li>TAC</li>
+<li>UNITS Network</li>
 </ul>
-<h4 id="reward-claim-chain"><a class="header" href="#reward-claim-chain">Reward Claim Chain</a></h4>
-<p>You can create campaigns with the reward tokens deployed on the following chains: </p>
-<ul>
-<li>Ethereum</li>
-<li>BNB Chain</li>
-</ul>
-<p><strong>NOTE</strong>:  Reward claim and the protocol to be incentivized can be deployed on different chains. <a href="../developer-sdk/read-and-claim-rewards.html">Here</a> are more details.</p>
 
                     </main>
 
