--- a/print.html
+++ b/print.html
@@ -37,10 +37,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-3dbab584.js";
+            window.path_to_searchindex_js = "searchindex-3eeb8d76.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-d0d78757.js"></script>
+        <script src="toc-80d176f6.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -413,7 +413,7 @@ To deposit rewards, you may also directly transfer reward tokens to the campaign
 <p>Also, for the 1st epoch after the campaign starts, it may take significantly more time (4 to 12 hours) to update the rewards due to the time to index and fetch relevant historical on-chain data (events, storage, transactions).</p>
 <p>In some rare cases (e.g., there is a spike in campaign participants), the rewards update delay may be significantly longer than 4 hours as we expand system capacity and resolve the issues. Rest assured that the rewards in the delayed epochs will still be proved.</p>
 <h3 id="dust-rewards"><a class="header" href="#dust-rewards">Dust Rewards</a></h3>
-<p>For each epoch, if a user’s reward amount &lt; 1 wei (e.g., less than 10^-18 if the reward token decimal is 18), the user’s rewards won’t be attested for the epoch.</p>
+<p>For each epoch, if a user’s rewards &lt; $0.0001 in the epoch, the user’s rewards won’t be attested for the epoch.</p>
 <h2 id="reward-rules-for-each-campaign-types"><a class="header" href="#reward-rules-for-each-campaign-types">Reward Rules for Each Campaign Types</a></h2>
 <h3 id="concentrated-liquidity-campaign-1"><a class="header" href="#concentrated-liquidity-campaign-1">Concentrated Liquidity Campaign</a></h3>
 <p>In a concentrated liquidity campaign, each liquidity provider (LP) is allocated rewards proportional to the fees earned:</p>
@@ -1104,30 +1104,25 @@ function claimAll(
 </thead>
 <tbody>
 <tr><td>ERC-20 Token</td><td>Token Holding</td><td>Any protocol requiring ERC-20 token holding</td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td><a href="https://app.uniswap.org/">Uniswap v3</a></td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td><a href="https://dapp.quickswap.exchange/swap">QuickSwap v3</a></td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v3 (coming soon)</td></tr>
-<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v4 (coming soon)</td></tr>
-<tr><td>Lending Protocol</td><td>Lend and Borrow</td><td><a href="https://app.euler.finance/">Euler Finance</a></td></tr>
-<tr><td>ALM</td><td>Concentrated Liquidity</td><td><a href="https://app.beefy.finance/">Beefy</a></td></tr>
-<tr><td>ALM</td><td>Concentrated Liquidity</td><td><a href="https://app.gamma.xyz/">Gamma</a></td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>Uniswap v3</td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>PancakeSwap v3</td></tr>
+<tr><td>DEX</td><td>Concentrated Liquidity</td><td>KoalaSwap</td></tr>
+<tr><td>Lending Protocol</td><td>Lend and Borrow</td><td>Euler Finance</td></tr>
 </tbody>
 </table>
 
 <h2 id="supported-chains"><a class="header" href="#supported-chains">Supported Chains</a></h2>
-<h4 id="data-source-chain"><a class="header" href="#data-source-chain">Data Source Chain</a></h4>
-<p>You can incentivize protocols deployed on the following chains:</p>
 <ul>
 <li>Ethereum</li>
+<li>Arbitrum</li>
+<li>OP</li>
+<li>Linea</li>
 <li>BNB Chain</li>
+<li>Base</li>
+<li>World Chain</li>
+<li>TAC</li>
+<li>UNITS Network</li>
 </ul>
-<h4 id="reward-claim-chain"><a class="header" href="#reward-claim-chain">Reward Claim Chain</a></h4>
-<p>You can create campaigns with the reward tokens deployed on the following chains: </p>
-<ul>
-<li>Ethereum</li>
-<li>BNB Chain</li>
-</ul>
-<p><strong>NOTE</strong>:  Reward claim and the protocol to be incentivized can be deployed on different chains. <a href="#read-and-claim-rewards">Here</a> are more details.</p>
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="github"><a class="header" href="#github">Github</a></h1>
 <p>Incentra Contract:</p>
