deploy: af8afae568b9a48182fccf39a98bd54ff2d58d3c

--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-fd25af1a.js";
+            window.path_to_searchindex_js = "searchindex-6c94ea89.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-59140b12.js"></script>
@@ -493,7 +493,8 @@ To deposit rewards, you may also directly transfer reward tokens to the campaign
 <li><code>UNISWAP_V3</code></li>
 <li><code>UNISWAP_V4</code></li>
 <li><code>PANCAKESWAP_V3</code></li>
-<li><code>PANCAKESWAP_V4</code></li>
+<li><code>PANCAKESWAP_V4_CL</code> </li>
+<li><code>PANCKAESWAP_V4_BIN</code></li>
 <li><code>QUICKSWAP_V3</code></li>
 </ul>
 <p><br><code>CampaignStatus</code> <strong>Enum</strong></p>
