--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-6f84b7e9.js";
+            window.path_to_searchindex_js = "searchindex-33bda520.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-59140b12.js"></script>
@@ -488,22 +488,16 @@ To deposit rewards, you may also directly transfer reward tokens to the campaign
 
 <p>If any filter is not specified, it means there is no constraint for this filter.</p>
 <p>The <code>CampaignType</code> enum has the following values:</p>
-<table data-full-width="true">
-<thead>
-<tr><th>CampaignType</th><th>Value</th></tr>
-</thead>
-<tbody>
-<tr><td><code>UNISWAP_V3</code></td><td>1</td></tr>
-<tr><td><code>UNISWAP_V4</code></td><td>2</td></tr>
-<tr><td><code>PANCAKE_V3</code></td><td>3</td></tr>
-<tr><td><del><code>PANCAKE_V4</code></del> </td><td><del>4</del></td></tr>
-<tr><td><code>QUICKSWAP_V3</code></td><td>5</td></tr>
-<tr><td><code>KOALASWAP</code></td><td>6</td></tr>
-<tr><td><code>PANCAKE_V4_CL</code></td><td>8</td></tr>
-<tr><td><code>PANCAKE_V4_BIN</code></td><td>9</td></tr>
-</tbody>
-</table>
-
+<ul>
+<li><code>UNISWAP_V3：1</code></li>
+<li><code>UNISWAP_V4：2</code> </li>
+<li><code>PANCAKE_V3：3</code> </li>
+<li><del><code>PANCAKE_V4：4</code></del> </li>
+<li><code>QUICKSWAP_V3：5</code></li>
+<li><code>KOALASWAP：6</code> </li>
+<li><code>PANCAKE_V4_CL：8</code></li>
+<li><code>PANCAKE_V4_BIN：9</code></li>
+</ul>
 <p><br><code>CampaignStatus</code> <strong>Enum</strong></p>
 <p>The <code>CampaignStatus</code> enum has the following values:</p>
 <ul>
